test/conformance/chainsaw/validating-policies/context/parse-sa/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad
  namespace: test
spec:
  containers:
    - name: my-container
      image: nginx
