test/conformance/chainsaw/validating-policies/context/parse-sa/good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: default
spec:
  containers:
    - name: my-container
      image: nginx
