test/conformance/chainsaw/validating-policies/context/parse-sa/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: parse-sa
spec:
   steps:
    - name: create policy
      use:
        template: ../../../_step-templates/create-policy.yaml
        with:
          bindings:
          - name: file
            value: policy.yaml
    - name: wait-validating-policy-ready
      use:
        template: ../../../_step-templates/validating-policy-ready.yaml
        with:
          bindings:
          - name: name
            value: parse-sa-test
          - name: message
            value: ""
    - name: create service account
      try:
        - create:
            file: sa.yaml
    - name: create pod as service account
      try:
        - script:
            content: |
              #!/bin/bash
              set -eu
              echo "🔹 Creating pod as service account"
              if kubectl --as=system:serviceaccount:default:my-sa apply -f good.yaml; then
                echo " Pod created successfully"
                exit 0
              else
                echo " Failed to create pod"
                exit 1
              fi
        - script:
            content: |
              #!/bin/bash
              set -eu
              echo "Creating bad pod as service account"
              if kubectl --as=system:serviceaccount:test:my-df apply -f bad.yaml; then
                echo " Unexpected success, test should fail"
                exit 1
              else
                echo "Expected failure"
                exit 0
              fi
